@@ -188,7 +188,11 @@ typedef struct
 } doomcom_t;
 
 // Create any new ticcmds and broadcast to other players.
+#ifdef HAVE_NET
 void NetUpdate (void);
+#else
+void D_BuildNewTiccmds(void);
+#endif
 
 //? how many ticks to run?
 void TryRunTics (void);
